--- a/templates/run.simple.bash.j2
+++ b/templates/run.simple.bash.j2
@@ -4,7 +4,7 @@
 
 # if running TokuMX, need to select compression for collection and secondary indexes (zlib is default)
 #   valid values : lzma, quicklz, zlib, none
-export MONGO_COMPRESSION=zlib
+export MONGO_COMPRESSION=lzma
 
 # if running TokuMX, need to select basement node size (65536 is default)
 #   valid values : integer > 0 : 65536 for 64K
@@ -12,11 +12,11 @@ export MONGO_BASEMENT=65536
 
 # number of collections to create for the benchmark
 #   valid values : integer > 0
-export NUM_COLLECTIONS={{ sysbench-mongodb_number_of_collections }}
+export NUM_COLLECTIONS=16
 
 # number of documents to maintain per collection
 #   valid values : integer > 0
-export NUM_DOCUMENTS_PER_COLLECTION={{ sysbench-mongodb_number_of_docs_per_collection }}
+export NUM_DOCUMENTS_PER_COLLECTION=300000000
 
 # total number of documents to insert per "batch"
 #   valid values : integer > 0
@@ -37,10 +37,10 @@ export RUN_TIME_SECONDS=$[RUN_TIME_MINUTES*60]
 
 # database in which to run the benchmark
 #   valid values : character
-export DB_NAME={{ sysbench-mongodb_database }}
+export DB_NAME=sbtest
 
-export USERNAME={{ sysbench-mongodb_username }}
-export PASSWORD={{ sysbench-mongodb_password }}
+export USERNAME=sbtest
+export PASSWORD=sbtest
 
 # write concern for the benchmark client
 #   valid values : FSYNC_SAFE, NONE, NORMAL, REPLICAS_SAFE, SAFE
@@ -59,10 +59,10 @@ export NUM_INSERTS_PER_FEEDBACK=-1
 export NUM_SECONDS_PER_FEEDBACK=10
 
 # name of the server to connect to
-export MONGO_SERVER={{ sysbench-mongodb_host }}
+export MONGO_SERVER=104.130.20.53
 
 # port of the server to connect to
-export MONGO_PORT={{ sysbench-mongodb_port }}
+export MONGO_PORT=9005
 
 # set to Y to run in "read only" mode, just queries
 #   valid values : N or Y
