--- a/templates/config.bash.j2
+++ b/templates/config.bash.j2
@@ -1,10 +1,6 @@
-#!/bin/bash
-
-# simple script to run against running MongoDB/TokuMX server localhost:(default port)
-
 # if running TokuMX, need to select compression for collection and secondary indexes (zlib is default)
 #   valid values : lzma, quicklz, zlib, none
-export MONGO_COMPRESSION=lzma
+export MONGO_COMPRESSION=zlib
 
 # if running TokuMX, need to select basement node size (65536 is default)
 #   valid values : integer > 0 : 65536 for 64K
@@ -16,7 +12,7 @@ export NUM_COLLECTIONS=16
 
 # number of documents to maintain per collection
 #   valid values : integer > 0
-export NUM_DOCUMENTS_PER_COLLECTION=300000000
+export NUM_DOCUMENTS_PER_COLLECTION=1000000
 
 # total number of documents to insert per "batch"
 #   valid values : integer > 0
@@ -39,8 +35,10 @@ export RUN_TIME_SECONDS=$[RUN_TIME_MINUTES*60]
 #   valid values : character
 export DB_NAME=sbtest
 
-export USERNAME=sbtest
-export PASSWORD=sbtest
+# database username on DB_NAME
+export USERNAME=dba
+# database password to use for USERNAME
+export PASSWORD=dba
 
 # write concern for the benchmark client
 #   valid values : FSYNC_SAFE, NONE, NORMAL, REPLICAS_SAFE, SAFE
@@ -59,10 +57,10 @@ export NUM_INSERTS_PER_FEEDBACK=-1
 export NUM_SECONDS_PER_FEEDBACK=10
 
 # name of the server to connect to
-export MONGO_SERVER=104.130.20.53
+export MONGO_SERVER=localhost
 
 # port of the server to connect to
-export MONGO_PORT=9005
+export MONGO_PORT=27017
 
 # set to Y to run in "read only" mode, just queries
 #   valid values : N or Y
@@ -99,41 +97,3 @@ export SYSBENCH_INDEX_UPDATES=1
 # number of non-indexed updates per sysbench "transaction"
 #   valud values : integer > 0
 export SYSBENCH_NON_INDEX_UPDATES=1
-
-export CLASSPATH=/root/sysbench/mongo-java-driver-2.11.4.jar:$CLASSPATH
-export CLASSPATH=/root/sysbench/src:$CLASSPATH
-
-echo $CLASSPATH
-
-javac -cp $CLASSPATH:$PWD/src src/jmongosysbenchload.java
-javac -cp $CLASSPATH:$PWD/src src/jmongosysbenchexecute.java
-
-
-# load the data
-
-export LOG_NAME=mongoSysbenchLoad-${NUM_COLLECTIONS}-${NUM_DOCUMENTS_PER_COLLECTION}-${NUM_LOADER_THREADS}.txt
-export BENCHMARK_TSV=${LOG_NAME}.tsv
-
-rm -f $LOG_NAME
-rm -f $BENCHMARK_TSV
-
-T="$(date +%s)"
-java -cp $CLASSPATH:$PWD/src jmongosysbenchload $NUM_COLLECTIONS $DB_NAME $NUM_LOADER_THREADS $NUM_DOCUMENTS_PER_COLLECTION $NUM_DOCUMENTS_PER_INSERT $NUM_INSERTS_PER_FEEDBACK $NUM_SECONDS_PER_FEEDBACK $BENCHMARK_TSV $MONGO_COMPRESSION $MONGO_BASEMENT $WRITE_CONCERN $MONGO_SERVER $MONGO_PORT $USERNAME $PASSWORD
-echo "" | tee -a $LOG_NAME
-T="$(($(date +%s)-T))"
-printf "`date` | sysbench loader duration = %02d:%02d:%02d:%02d\n" "$((T/86400))" "$((T/3600%24))" "$((T/60%60))" "$((T%60))" | tee -a $LOG_NAME
-
-
-# execute the benchmark
-
-export LOG_NAME=mongoSysbenchExecute-${NUM_COLLECTIONS}-${NUM_DOCUMENTS_PER_COLLECTION}-${NUM_WRITER_THREADS}.txt
-export BENCHMARK_TSV=${LOG_NAME}.tsv
-
-rm -f $LOG_NAME
-rm -f $BENCHMARK_TSV
-
-T="$(date +%s)"
-java -cp $CLASSPATH:$PWD/src jmongosysbenchexecute $NUM_COLLECTIONS $DB_NAME $NUM_WRITER_THREADS $NUM_DOCUMENTS_PER_COLLECTION $NUM_SECONDS_PER_FEEDBACK $BENCHMARK_TSV $SYSBENCH_READ_ONLY $RUN_TIME_SECONDS $SYSBENCH_RANGE_SIZE $SYSBENCH_POINT_SELECTS $SYSBENCH_SIMPLE_RANGES $SYSBENCH_SUM_RANGES $SYSBENCH_ORDER_RANGES $SYSBENCH_DISTINCT_RANGES $SYSBENCH_INDEX_UPDATES $SYSBENCH_NON_INDEX_UPDATES $WRITE_CONCERN $MAX_TPS $MONGO_SERVER $MONGO_PORT $USERNAME $PASSWORD | tee -a $LOG_NAME
-echo "" | tee -a $LOG_NAME
-T="$(($(date +%s)-T))"
-printf "`date` | sysbench benchmark duration = %02d:%02d:%02d:%02d\n" "$((T/86400))" "$((T/3600%24))" "$((T/60%60))" "$((T%60))" | tee -a $LOG_NAME
