--- a/templates/config.bash.j2
+++ b/templates/config.bash.j2
@@ -1,6 +1,33 @@
+# You will most likely want to change these values
+
+# database in which to run the benchmark
+export DB_NAME={{ sysbench_mongodb_database }}
+
+# database username on DB_NAME
+export USERNAME={{ sysbench_mongodb_username }}
+
+# database password to use for USERNAME
+export PASSWORD={{ sysbench_mongodb_password }}
+
+# name of the server to connect to
+export MONGO_SERVER={{ sysbench_mongodb_host }}
+
+# port of the server to connect to
+export MONGO_PORT={{ sysbench_mongodb_port }}
+
+# Use "yes" to load the collections
+DOLOAD=yes
+
+# Use "yes" to execute the benchmark
+DOQUERY=yes
+
+# Use a seed for the RNG, like $( date +%s )
+# This can be used to repeat, or not, the sequence of keys used per test.
+SEED=$( date +%s )
+
 # if running TokuMX, need to select compression for collection and secondary indexes (zlib is default)
 #   valid values : lzma, quicklz, zlib, none
-export MONGO_COMPRESSION=zlib
+export MONGO_COMPRESSION={{ sysbench_mongodb_compression }}
 
 # if running TokuMX, need to select basement node size (65536 is default)
 #   valid values : integer > 0 : 65536 for 64K
@@ -8,37 +35,28 @@ export MONGO_BASEMENT=65536
 
 # number of collections to create for the benchmark
 #   valid values : integer > 0
-export NUM_COLLECTIONS=16
+export NUM_COLLECTIONS={{ sysbench_mongodb_number_of_collections }}
 
 # number of documents to maintain per collection
 #   valid values : integer > 0
-export NUM_DOCUMENTS_PER_COLLECTION=1000000
+export NUM_DOCUMENTS_PER_COLLECTION={{ sysbench_mongodb_number_of_docs_per_collection }}
 
 # total number of documents to insert per "batch"
 #   valid values : integer > 0
-export NUM_DOCUMENTS_PER_INSERT=1000
+export NUM_DOCUMENTS_PER_INSERT={{ sysbench_mongodb_number_of_docs_per_insert }}
 
 # total number of simultaneous insertion threads (for loader)
 #   valid values : integer > 0
-export NUM_LOADER_THREADS=8
+export NUM_LOADER_THREADS={{ sysbench_num_loader_threads }}
 
 # total number of simultaneous benchmark threads
 #   valid values : integer > 0
-export NUM_WRITER_THREADS=64
+export NUM_WRITER_THREADS={{ sysbench_num_writer_threads }}
 
 # run the benchmark for this many minutes
 #   valid values : intever > 0
 export RUN_TIME_MINUTES=10
 export RUN_TIME_SECONDS=$[RUN_TIME_MINUTES*60]
-
-# database in which to run the benchmark
-#   valid values : character
-export DB_NAME=sbtest
-
-# database username on DB_NAME
-export USERNAME=dba
-# database password to use for USERNAME
-export PASSWORD=dba
 
 # write concern for the benchmark client
 #   valid values : FSYNC_SAFE, NONE, NORMAL, REPLICAS_SAFE, SAFE
@@ -56,44 +74,44 @@ export NUM_INSERTS_PER_FEEDBACK=-1
 #   valid values : integer > 0, set to -1 if using NUM_INSERTS_PER_FEEDBACK
 export NUM_SECONDS_PER_FEEDBACK=10
 
-# name of the server to connect to
-export MONGO_SERVER=localhost
-
-# port of the server to connect to
-export MONGO_PORT=27017
-
-# set to Y to run in "read only" mode, just queries
+# set to N to use begin/commit/ensure for TokuMX
 #   valid values : N or Y
-export SYSBENCH_READ_ONLY=N
+export SYSBENCH_AUTO_COMMIT=Y
 
 # number of documents to retrieve in range queries
-#   valud values : integer > 0
+#   valid values : integer > 0
 export SYSBENCH_RANGE_SIZE=100
 
 # number of point queries per sysbench "transaction"
-#   valud values : integer > 0
+#   valid values : integer >= 0
 export SYSBENCH_POINT_SELECTS=10
 
 # number of simple range queries per sysbench "transaction"
-#   valud values : integer > 0
+#   valid values : integer >= 0
 export SYSBENCH_SIMPLE_RANGES=1
 
 # number of aggregation queries per sysbench "transaction"
-#   valud values : integer > 0
+#   valid values : integer >= 0
 export SYSBENCH_SUM_RANGES=1
 
 # number of ordered range queries per sysbench "transaction"
-#   valud values : integer > 0
+#   valid values : integer >= 0
 export SYSBENCH_ORDER_RANGES=1
 
 # number of distinct range queries per sysbench "transaction"
-#   valud values : integer > 0
+#   valid values : integer >= 0
 export SYSBENCH_DISTINCT_RANGES=1
 
+# set all of the following 3 parameters to zero for a read-only benchmark
+
 # number of indexed updates per sysbench "transaction"
-#   valud values : integer > 0
+#   valid values : integer >= 0
 export SYSBENCH_INDEX_UPDATES=1
 
 # number of non-indexed updates per sysbench "transaction"
-#   valud values : integer > 0
+#   valid values : integer >= 0
 export SYSBENCH_NON_INDEX_UPDATES=1
+
+# number of delete/insert operations per sysbench "transaction"
+#   valid values : integer >= 0
+export SYSBENCH_INSERTS=1
